[N] New config specificaton added

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /#cix-main.org#
 *#
 /cix-todo.org
+/spices/.#cix-syslinux.org
+/spices/.#cix-hall-of-fame.org
+/spices/.#cix-the-heirloom-project.org
