--- a/conf/cix-vsftpd.conf
+++ b/conf/cix-vsftpd.conf
@@ -1,9 +1,11 @@
-# Please see vsftpd.conf.5 for all compiled in defaults.
+#+conf_url: http://vsftpd.beasts.org/vsftpd_conf.html
+#+conf_man: vsftpd.conf.5
+#+conf_cmd: /usr/bin/vsftpd
+#+conf_path: /etc/vsftpd/vsftpd.conf
+#+conf_frmt: option=value
+#+conf_re: ^[^#][a-z_]+=(YES|NO|[0-9]*|.*)$ 
+#+conf_total: 125
 
-#~path: /etc/vsftpd/vsftpd.conf
-#~opt_frmt: option=value
-#+opt_regex: ^[^#][a-z_]+=(YES|NO|[0-9]*|.*)$ 
-#~opt_total: 125
 # ------------------------------------------------------------------------------
 #+BOOLEAN_OPTIONS
 
@@ -109,11 +111,11 @@ chroot_local_user=NO
 connect_from_port_20=NO
 
 # If true, OpenSSL connection diagnostics are dumped to the vsftpd log file.
-#+default: NO; +from: v2.0.6
+#+default: NO, +from: v2.0.6
 debug_ssl=NO
 
 # If true, any failed upload files are deleted.
-#+default: NO; +from: v2.0.7
+#+default: NO, +from: v2.0.7
 delete_failed_uploads=NO
 
 # If activated, you may provide a list of anonymous password e-mail responses
@@ -292,7 +294,7 @@ port_promiscuous=NO
 # If set to yes, all SSL client connections are required to present a client
 # certificate. The degree of validation applied to this certificate is
 # controlled by validate_cert.
-#+default: NO; +from: v2.0.6 
+#+default: NO, +from: v2.0.6 
 require_cert=NO
 
 # If set to yes, all SSL data connections are required to exhibit SSL session
@@ -300,7 +302,7 @@ require_cert=NO
 # channel). Although this is a secure default, it may break many FTP clients, so
 # you may want to disable it. For a discussion of the consequences, see
 # http://scarybeastsecurity.blogspot.com/2009/02/vsftpd-210-released.html 
-#+default: YES; +from: v2.1.0
+#+default: YES, +from: v2.1.0
 require_ssl_reuse=YES
 
 # Set to YES if you want vsftpd to run as the user which launched vsftpd. This
@@ -499,7 +501,7 @@ anon_max_rate=0
 anon_umask=077
 
 # The file mode to force for chown()ed anonymous uploads.
-#+default: 0600; +from: v2.0.6 
+#+default: 0600, +from: v2.0.6 
 chown_upload_mode=0600
 
 # The timeout, in seconds, for a remote client to respond to our PORT style data
@@ -635,7 +637,7 @@ cmds_allowed=
 # This options specifies a comma separated list of denied FTP commands (post
 # login. USER, PASS, QUIT and others are always allowed pre-login). If a command
 # appears on both this and cmds_allowed then the denial takes precedence. 
-#+default: (none); +from: v2.1.0
+#+default: (none), +from: v2.1.0
 cmds_denied=
 
 # This option can be used to set a pattern for filenames (and directory names
