--- a/conf/cix-grub.cfg
+++ b/conf/cix-grub.cfg
@@ -4,7 +4,7 @@
 #+conf_path: /etc/default/grub, /etc/sysconfig/grub
 #+conf_frmt: OPTION=value
 #+conf_re: ^[^#][A-Z_]+=(true|false|[0-9]*|.*)$
-#+conf_total:
+#+conf_total: 46
 
 # For more detailed customisation of grub-mkconfig’s output, you may edit the
 # scripts in /etc/grub.d directly. /etc/grub.d/40_custom is particularly useful
