--- a/conf/cix-grub.cfg
+++ b/conf/cix-grub.cfg
@@ -177,7 +177,7 @@ GRUB_GFXPAYLOAD_LINUX=
 # installed, to discover other operating systems installed on the same system
 # and generate appropriate menu entries for them. Set this option to ‘true’ to
 # disable this.
-GRUB_DISABLE_OS_PROBER
+GRUB_DISABLE_OS_PROBER=
 
 # List of space-separated FS UUIDs of filesystems to be ignored from os-prober
 # output. For efi chainloaders it’s <UUID>@<EFI FILE>
